2011-01-04  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Neben dem Gebührenbescheid wird nun auch eine Datei kasse.txt erzeugt, die
	  neben den Betreiberdaten das Rechnungsdatum und den Rechnungsbetrag
	  enthält. Diese Datei wird nur einmal erstellt, bevor der Vorgangsstatus
	  auf "Bescheid gedruckt" erhöht wird.

2011-01-04  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/utils/DateUtils.java: Es gibt eine neue
	  Funktion, die anhand einer Frist von 31 Tagen und einem Ausgangsdatum ein
	  neues Datum berechnet. Es werden dabei lediglich die Werktage gezählt.

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Das Datum, an dem ein Gebührenbescheid bezahlt werden muss, wird nun
	  mittels der neuen Funktion in DateUtils errechnet.

2011-01-03  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Der Knopf zum Erhöhen des Vorgangsstatus hat erfüllt nun seinen Zweck -
	  der Vorgang wird nach dem Knopfdruck erhöht. Wichtig hierbei ist, dass die
	  Reihenfolge der Status von der Datenbank-ID abhängig ist. Ist
	  beispielsweise ein Status mit der ID 1 selektiert, wird nach dem Druck des
	  Knopfes der Status mit der ID 2 ausgewählt, etc...

	* src/de/bielefeld/umweltamt/aui/mappings/atl/AtlStatus.java: Es gibt eine
	  neue Funktion, die ein AtlStatus Objekt anhand einer ID liefert.

2011-01-03  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java:
	  Knopf zum Speichern und Drucken von Probenahmeaufträgen und
	  Gebührenbescheiden in "Speichern und Drucken" umbenannt bzw beschriftet,
	  damit das Verhalten des Knopfes deutlicher wird.

2011-01-03  Ingo Weinzierl <ingo@intevation.de>

	* src/de/bielefeld/umweltamt/aui/module/common/editors/ProbenEditor.java: